# my-ml-proj

./: .gitignore  README.md  pyproject.toml
models/: xgb_trainmodel.pkl
src/data/: make_dataset_fe1.py
src/features/: build_features copy 2.py  build_features_fe1.py  build_features_fe2.py  build_features_trainmodel.py
src/models/: predict_model_fe1.py  predict_model_fe2.py  predict_model_trainmodel.py  train_model_fe1.py  train_model_fe2.py  train_model_trainmodel.py
